# compress_proxy

./: .gitignore  README.md
comm_channel/: DOCA_cross.sh  Makefile  REDAME.md  cc_client.c  cc_common.c  cc_common.h  cc_server.c  meson.build  run.sh
comp_echo/: common.c  compress_server.c  compress_server.h  pack.c  run.sh
comp_echo/include/: common.h  doca_utils.h
comp_proxy/: Makefile  README.md  comm_channel_util.c  comm_channel_util.h  common.c  common.h  compress_proxy.c  compress_proxy.h  compress_proxy_ucx.c  compress_proxy_ucx.h  compress_util.c  compress_util.h  doca_utils.c  hello_world_util.h  meson.build  mpi_dpuoffload.c  mpi_dpuoffload.h  proxy_proxy.c  run.sh  run_host.sh  run_proxy_proxy.sh  ucp_hello_world.c  ucp_util.h  ucs_util.h  ucx_client_server_example.c
comp_proxy/include/: pack.h
experiment/: README.md  extern_zlib.c  extern_zstd.c  meson.build  run.sh  test_send.c  test_send_nbytes.c  time_compression.c  time_zstd.c
host/: Makefile  README.md  compress_client.c  compress_client.h  extern.c  extern_dpuo.c  meson.build  run.sh  test_file_send.c  test_init.c  test_send.c  test_sendrecv.c
include/: compress_mpi.h
toybox/: README.md  iov_sample.c  mpi_send.c
